[package]
name = "jup-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
currency_rs = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }


