[package]
name = "jup-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
# Enables native tokio/reqwest-based implementation
native = ["dep:tokio", "log-native"] # Added log-native here
# Enables Cloudflare Workers compatibility using worker-rs
worker = [
    "dep:worker",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:futures-channel",
    "dep:futures-util",
    "wasm-compat", # Internal flag for conditional compilation logic
    "log-native" # Optionally enable logging for worker too
]
wasm-compat = []
# Enable logging (optional)
log-native = ["dep:log"] # Enable log feature

[dependencies]
anyhow = "1.0"
currency_rs = "1.3"
once_cell = "1.20.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"

# Native dependencies (enabled by 'native' feature)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"], optional = true }

# Worker dependencies (enabled by 'worker' feature)
worker = { version = "0.5.0", optional = true }
js-sys = { version = "0.3.77", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
futures-channel = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", optional = true }

# Logging dependencies (optional)
log = { version = "0.4", optional = true }

[dev-dependencies]
# Make dev deps optional and tied to native feature if they require it
env_logger = "0.11.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # For #[tokio::test]
dotenvy = "0.15.7"
